--- a/Homework_1.tex
+++ b/Homework_1.tex
@@ -31,14 +31,14 @@ this nature it is best to factor the polynomial, this usually results in a short
 \[P(k):\sum\limits_{i = 1}^{k} i = \frac{k(k + 1)}{2} \forall k \epsilon \mathbb{Z}_+\]
 \item Inductive Step:
 
-\begin{align}
-&P(k+1):\sum\limits_{i = 1}^{k+1} i = \frac{(k + 1)(k+2)}{2} \forall k \epsilon \mathbb{Z}_+\\
-&\sum\limits_{i = 1}^{k} i + (k + 1)= \frac{(k + 1)(k+2)}{2}\\
-&\frac{k(k+1)}{2} + (k+1)= \frac{(k + 1)(k+2)}{2}\\
-&\frac{k(k+1)}{2} + \frac{2(k+1)}{2}= \frac{(k + 1)(k+2)}{2}\\
-&\frac{k(k+1)+ 2(k+1)}{2}= \frac{(k + 1)(k+2)}{2}\\
-&\frac{(k + 1)(k+2)}{2}= \frac{(k + 1)(k+2)}{2} \hspace{0.3cm}\qedsymbol
-\end{align}
+\begin{align*}
+P(k+1):\sum\limits_{i = 1}^{k+1} i &= \frac{(k + 1)(k+2)}{2} \forall k \epsilon \mathbb{Z}_+\\
+\sum\limits_{i = 1}^{k} i + (k + 1)&= \frac{(k + 1)(k+2)}{2}\\
+\frac{k(k+1)}{2} + (k+1)&= \frac{(k + 1)(k+2)}{2}\\
+\frac{k(k+1)}{2} + \frac{2(k+1)}{2}&= \frac{(k + 1)(k+2)}{2}\\
+\frac{k(k+1)+ 2(k+1)}{2}&= \frac{(k + 1)(k+2)}{2}\\
+\frac{(k + 1)(k+2)}{2}&= \frac{(k + 1)(k+2)}{2} \hspace{0.3cm}\qedsymbol
+\end{align*}
 \end{enumerate}
 \noindent Prove Gauss’s sum using induction on \begin{math}n\end{math}. Make sure to include a base case for \begin{math} n = 1\end{math} and an inductive hypothesis and an inductive step for \begin{math}n > 1\end{math}.\\\\
 \noindent \textbf{Theorem 3.}
@@ -46,27 +46,31 @@ this nature it is best to factor the polynomial, this usually results in a short
 
 \begin{enumerate}
 \item Base Case:\\
-\begin{align}
-&P(1):\sum\limits_{i = 1}^{1} i^5 = \big(\frac{1(1 + 1)}{2}\big)^2\frac{2(1)^2+2(1)-1}{3}\\
-&1^5 = \big(\frac{1(2)}{2}\big)^2\frac{3}{3}\\
-&1 = 1
-\end{align}
-\item Inductive Hypothesis:
-\[P(k):\sum\limits_{i = 1}^{k} i^5 = \big(\frac{k(k + 1)}{2}\big)^2\frac{2k^2+2k-1}{3} \forall k \epsilon \mathbb{Z}_+  \]
-\item Inductive Step:
+\begin{align*}
+P(1):\sum\limits_{i = 1}^{1} i^5 &= \big(\frac{1(1 + 1)}{2}\big)^2\frac{2(1)^2+2(1)-1}{3}\\
+1^5 &= \big(\frac{1(2)}{2}\big)^2\frac{3}{3}\\
+1 &= 1
+\end{align*}
 
-\begin{align}
+\item Inductive Hypothesis:
+\begin{align*}
+&P(k):\sum\limits_{i = 1}^{k} i^5 = \big(\frac{k(k + 1)}{2}\big)^2\frac{2k^2+2k-1}{3} \forall k \epsilon \mathbb{Z}_+
+\end{align*}
+\item Inductive Step:
+\begin{align*}
 &P(k+1):\sum\limits_{i = 1}^{k+1} i^5 = \big(\frac{(k+1)(k + 1 + 1)}{2}\big)^2\frac{2(k+1)^2+2(k+1)-1}{3} \forall k \epsilon \mathbb{Z}_+ \\
 &\sum\limits_{i = 1}^{k} i^5 + (k + 1)^5 = \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\
 &\bigg(\frac{k(k + 1)}{2}\bigg)^2\frac{2k^2+2k-1}{3} + (k + 1)^5 = \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\
 &\bigg(\frac{1}{12}\bigg)[k^2(k+1)^2(2k^2+2k-1)+12(k+1)^5] \\&= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\
 &\bigg(\frac{1}{12}\bigg)[(k^4+2k^3+k^2)(2k^2+2k-1)+12(k+1)^5]\\&= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\
-&\bigg(\frac{1}{12}\bigg)(2k^6+6k^5+5k^4-k^2+12k^5+60k^4+120k^3+120k^2+60k+12))\\&= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\
+&\bigg(\frac{1}{12}\bigg)(2k^6+6k^5+5k^4-k^2+12k^5+60k^4+120k^3+120k^2+60k+12))\\&= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}
+\end{align*}
+\begin{align*}
 &\bigg(\frac{1}{12}\bigg)(2k^6+18k^5+65k^4+120k^3+119k^2+60k+12))\\&= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\
 &\bigg(\frac{1}{12}\bigg)(k^4+6k^3+13k^2+12k+4)(2k^2+6k+3)\\&= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\
 &\bigg(\frac{1}{12}\bigg)(k^2+3k+2)^2(2k^2+6k+3)= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\
-&\big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\\\qedsymbol
-\end{align}
+&\big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}= \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}\hspace{0.3cm}\qedsymbol
+\end{align*}
 \end{enumerate}
 
 
