--- a/Homework_1.tex
+++ b/Homework_1.tex
@@ -127,5 +127,19 @@ P(a+1,b+1,c+1):((a+1)^{c+1} - (b+1)^{c+1})\bmod{((a + 1) - (b + 1))}&\equiv 0 ;\
 &\hspace{0.3cm}\qedsymbol
 \end{align*}
 \end{enumerate}
-Prove the following theorem using the definition of \begin{math}Ω(f (n))\end{math} and \begin{math}O(f (n))\end{math} , or else the limit test.
+Prove the following theorem using the definition of \begin{math} \Omega (f (n))\end{math} and \begin{math}O(f (n))\end{math} , or else the limit test.\\\\
+\noindent \textbf{Theorem 4.} Let \begin{math}d \geq 2\end{math} be an integer. Then \begin{math}\sqrt[^d]{n} \epsilon \Omega (\sqrt[^{2d}]{n})\end{math} and \begin{math}(\ln {n}^d) \epsilon O(\sqrt{n})\end{math}\\\\
+\begin{align}
+\lim_{n\to\infty} \frac{n^{\frac{1}{d}}}{n^{\frac{1}{2d}}} &= \lim_{n\to\infty} n^{\frac{1}{d}} n^{\frac{-1}{2d}}\\
+&= \lim_{n\to\infty} n^{\frac{1}{d}-\frac{1}{2d}}\\
+&= \lim_{n\to\infty} n^{\frac{1}{2d}} \rightarrow \infty
+\end{align}\\
+Use the fact that for any \begin{math} n  \geq 1\end{math} by the Cauchy-Sqwarz inequality\
+\[\ln{n} = \int_{1}^{n} \frac{dx}{x} \leq \sqrt{\int_{1}^{n} dx \int_{1}^{n} \frac{dx}{x^2}} = \sqrt{(n-1)(1-\frac{1}{n})} = \sqrt{n + \frac{1}{n} - 2}\]\\
+Producing a desired result of:
+\[\ln{n} \leq \sqrt{n + \frac{1}{n} - 2}\]
+Using the result of prior limit test and immediate results above (since \begin{math}d \geq 2\end{math}), we may say that:
+\[\ln{n} < \sqrt[2d]{n} < \sqrt{n + \frac{1}{n} - 2} < \sqrt[d]{n} \leq \sqrt{n}\]
+Thus:
+\[\lim_{n\to\infty} \frac{(\ln{n})^d}{\sqrt{n}} \rightarrow 0\]
 \end{document}
