--- a/Homework_1.tex
+++ b/Homework_1.tex
@@ -119,7 +119,7 @@ P(a+1,b+1,c+1):((a+1)^{c+1} - (b+1)^{c+1})\bmod{((a + 1) - (b + 1))}&\equiv 0 ;\
 (\sum\limits_{i = 0}^{c} {c \choose i} a^{i+1} - \sum\limits_{j = 0}^{c} {c \choose j} b^{j+1} + \sum\limits_{i = 0}^{c} {c \choose i} a^i - \sum\limits_{j = 0}^{c} {c \choose j} b^j)\bmod{(a-b)} &\equiv 0\\
 (\sum\limits_{i = 0}^{c} {c \choose i} a^{i+1} - \sum\limits_{j = 0}^{c} {c \choose j} b^{j+1} + \sum\limits_{i = 1}^{c} {c \choose i} a^i - \sum\limits_{j = 1}^{c} {c \choose j} b^j + c - c)\bmod{(a-b)} &\equiv 0\\
 ((\sum\limits_{i = 0}^{c} {c \choose i} a^{i+1} - \sum\limits_{j = 0}^{c} {c \choose j} b^{j+1})\bmod{(a-b)} +\\ (\sum\limits_{i = 1}^{c} {c \choose i} a^i - \sum\limits_{j = 1}^{c} {c \choose j} b^j)\bmod{(a-b)})\bmod{(a-b)} &\equiv 0\\
-(((a-b)(\sum\limits_{i = 0}^{c-1} {c \choose i} a^{i} - \sum\limits_{j = 0}^{c-1} {c \choose j} b^{j}))\bmod{(a-b)} +\\ ((a-b)(\sum\limits_{i = 1}^{c-1} {c \choose i} a^{i-1} - \sum\limits_{j = 1}^{c-1} {c \choose j} b^{j-1}))\bmod{(a-b)})\bmod{(a-b)} &\equiv 0\\
+(((\sum\limits_{i = 1}^{c} {c \choose i} a^{i} - \sum\limits_{j = 0}^{c} {c \choose j} b^{j}))\bmod{(a-b)} +\\ ((a-b)(\sum\limits_{i = 1}^{c-1} {c \choose i} a^{i-1} - \sum\limits_{j = 1}^{c-1} {c \choose j} b^{j-1}))\bmod{(a-b)})\bmod{(a-b)} &\equiv 0\\
 \end{align*}
 \begin{align*}
 (0 + 0) &\equiv 0\\
