--- a/Homework_1.tex
+++ b/Homework_1.tex
@@ -162,7 +162,7 @@ The degree of the polynomial above is smaller than that below.
 \item \begin{math}f_2(n) = (\frac{n}{\log{n}})^3=n^3(\frac{1}{\log{n}})^3\end{math}\\
 The degree of the polynomial above is same as that below but the function above is has a division of logarithm which slows it down.
 \item \begin{math}f_0(n) = n^3 + n^2 + n + 1\end{math}\\
-No simplication of the function that I know of can be applied but by looking at Knuth's pecking order I can see that any function of the form \begin{math}c^n\end{math} will be greater than \begin{math}n^c\end{math}.
+No simplication of the function below that I know of can be applied but by looking at Knuth's pecking order I can see that any function of the form \begin{math}c^n\end{math} will be greater than \begin{math}n^c\end{math}.
 \item \begin{math}f_8(n) = 100^{\sqrt{n}}\end{math}\\
 By consulting concrete mathematics, when you have two different exponetials you need to compare the powers of the function inside the power. Since \begin{math}\sqrt{n} < n\end{math} the function above grows slower than that below.
 \item \begin{math}f_4(n) = 9^{\frac{n}{2}} = 3^{n}\end{math}\\
