--- a/Homework_1.tex
+++ b/Homework_1.tex
@@ -17,8 +17,6 @@ Make sure your proof is complete, concise, clear and precise.
 this nature it is best to factor the polynomial, this usually results in a short elegant solution. 
 \[ \lim_{n \to \infty}  \frac{n^5-64n^3-n^2}{n^5} = \lim_{n \to \infty} \frac{n^5}{n^5}\Bigg(\frac{1-\frac{64}{n^2}-\frac{1}{n^3}}{1}\Bigg) = \lim_{n \to \infty} 1\Bigg(\frac{1-0-0}{1}\Bigg) = \lim_{n \to \infty} 1 = 1\]
 \\Since the limit converged to 1, a positive constant value, we may say that theorem 1 is indeed true.\\\\
-
-
 \noindent Prove Gauss’s sum using induction on \begin{math}n\end{math}. Make sure to include a base case for \begin{math} n = 1\end{math} and an inductive hypothesis and an inductive step for \begin{math}n > 1\end{math}.\\
 
 \noindent \textbf{Theorem 2.}
@@ -34,7 +32,9 @@ this nature it is best to factor the polynomial, this usually results in a short
 \begin{align*}
 P(k+1):\sum\limits_{i = 1}^{k+1} i &= \frac{(k + 1)(k+2)}{2} \forall k \epsilon \mathbb{Z}_+\\
 \sum\limits_{i = 1}^{k} i + (k + 1)&= \frac{(k + 1)(k+2)}{2}\\
+\intertext{Preparation for introduction of inductive hypothesis.}\\
 \frac{k(k+1)}{2} + (k+1)&= \frac{(k + 1)(k+2)}{2}\\
+\intertext{Introduction of the iductive hypothesis.}\\
 \frac{k(k+1)}{2} + \frac{2(k+1)}{2}&= \frac{(k + 1)(k+2)}{2}\\
 \frac{k(k+1)+ 2(k+1)}{2}&= \frac{(k + 1)(k+2)}{2}\\
 \frac{(k + 1)(k+2)}{2}&= \frac{(k + 1)(k+2)}{2}\\
@@ -62,68 +62,62 @@ P(1):\sum\limits_{i = 1}^{1} i^5 &= \big(\frac{1(1 + 1)}{2}\big)^2\frac{2(1)^2+2
 \begin{align*}
 P(k+1):\sum\limits_{i = 1}^{k+1} i^5 = \big(\frac{(k+1)(k + 1 + 1)}{2}\big)^2\frac{2(k+1)^2+2(k+1)-1}{3} \forall k \epsilon \mathbb{Z}_+ \\
 \sum\limits_{i = 1}^{k} i^5 + (k + 1)^5 = \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3} \\
+\intertext{Preparation of the inductive hypothesis.}
 \bigg(\frac{k(k + 1)}{2}\bigg)^2\frac{2k^2+2k-1}{3} + (k + 1)^5 &=\\
+\intertext{Introduction of the inductive hypothesis.}
 \bigg(\frac{1}{12}\bigg)[k^2(k+1)^2(2k^2+2k-1)+12(k+1)^5]&= \\
 \bigg(\frac{1}{12}\bigg)[(k^4+2k^3+k^2)(2k^2+2k-1)+12(k+1)^5]&=\\
-\end{align*}
-\begin{align*}
+\intertext{My technique for proofs such as these is expansion then contraction. It is typically much easier to see where to go with a polynomial once you've fully expanded all terms.}\\
 \bigg(\frac{1}{12}\bigg)(2k^6+6k^5+5k^4-k^2+12k^5+60k^4+120k^3+120k^2+60k+12))&=\\
 \bigg(\frac{1}{12}\bigg)(2k^6+18k^5+65k^4+120k^3+119k^2+60k+12))&=\\
 \bigg(\frac{1}{12}\bigg)(k^4+6k^3+13k^2+12k+4)(2k^2+6k+3)&=\\
 \bigg(\frac{1}{12}\bigg)(k^2+3k+2)^2(2k^2+6k+3)&=\\
 \big(\frac{(k+1)(k + 2)}{2}\big)^2\frac{2k^2+5k+2}{3}&=\\
+\intertext{The prior three steps were obtained by fully expanding the LHS to make it match the fully expanded polynomial four lines above. By the fundamental theorem of algebra, I knew I obtained the desired results. Those steps were included in reverse on the LHS for the readers benefit of readability.}
 &\hspace{0.3cm}\qedsymbol
 \end{align*}
 \end{enumerate}
 Prove by induction that for all natural numbers \begin{math}x\end{math} and \begin{math}n\end{math}, \begin{math}x^n - 1\end{math} is divisible by \begin{math}x - 1\end{math}.\\\\
-\noindent For this proof I decided to show that \begin{math}(x^n - 1)\bmod{x - 1}\equiv 0\end{math} because that statement is equivalent to saying \begin{math}x^n - 1\mid x - 1\end{math}.\\\\
-\noindent Show \begin{math}\forall x,n \epsilon \mathbb{Z}_+ ;P(x,n):(x^n - 1)\bmod{x - 1}\equiv 0\end{math} 
+\noindent For this proof I decided to show that \begin{math}x - 1\mid x^n - 1\end{math} which is equivant \begin{math}P(x,n):x^n - 1 = k(x - 1) ; k \epsilon \mathbb{Z}_+ \end{math} where k is any integer multiple.\\\\ 
 \begin{enumerate}
 \item Base Case:\\
-\[P(1,1):(1^1 - 1)\bmod{1 - 1}\equiv 0 \mod 0 \equiv 0\]\\
-This is assuming that we define \begin{math}a \mod 0 \equiv 0\end{math} where a may be any integer. This answer depends on how we decide to define the modulus function. This is assuming we define the modulus to be the distance of any two integers from each other. In many modern programming languages and applications this operation is undefined. I see no other way to complete this proof without ignoring this limitation and using the more liberal definition.
+\[P(1):x^1 - 1 = 0 = k(x - 1); true if k = 1\]\\
 \item Inductive Hypothesis:
-\[P(a,b):(a^b - 1)\bmod{a - 1}\equiv 0\ ; \forall a,b \epsilon \mathbb{Z}_+\]
+\[P(m):a^m - 1 = k(a - 1) ; \forall a,m,k \epsilon \mathbb{Z}_+\]
 \item Inductive Step:\\
-For this proof I made heavy use of the binomial theorem, specifically the power expansion on \begin{math}(1+x)^n\end{math}.
 \begin{align*}
-P(a+1,b+1):((a+1)^{b+1} - 1)\bmod{(a + 1 - 1)}&\equiv 0\ ; \forall a,b \epsilon \mathbb{Z}_+\\
-((a+1)(a+1)^b - 1)\bmod{a}&\equiv 0\\
-((a+1)\sum\limits_{i = 0}^{b} {b \choose i} a^i - 1)\bmod{a}&\equiv 0\\
-(\sum\limits_{i = 0}^{b} {b \choose i} a^{i+1} + \sum\limits_{i = 0}^{b} {b \choose i} a^i - 1)\bmod{a}&\equiv 0\\
-(\sum\limits_{i = 0}^{b} {b \choose i} a^{i+1} + \sum\limits_{i = 1}^{b - 1} {b \choose i} a^i + {b \choose b}(a^b + 1) - 1)\bmod{a}&\equiv 0\\
-(\sum\limits_{i = 0}^{b} {b \choose i} a^{i+1} + \sum\limits_{i = 1}^{b - 1} {b \choose i} a^i + (1)(a^b + 1 - 1)\bmod{a}&\equiv 0\\
-(\sum\limits_{i = 0}^{b} {b \choose i} a^{i+1} + \sum\limits_{i = 1}^{b - 1} {b \choose i} a^i + a^b)\bmod{a}&\equiv 0\\
-((\sum\limits_{i = 0}^{b} {b \choose i} a^{i+1})\bmod{a} + (\sum\limits_{i = 1}^{b - 1} {b \choose i} a^i)\bmod{a} + (a^b)\bmod{a})\bmod{a}&\equiv 0\\
-(0 + 0 + 0)\bmod{a}&\equiv 0\\
-0\bmod{a}&\equiv 0\\
-0&\equiv 0\\
+P(m+1):a^{m+1} - 1 &= k(a - 1) ; \forall a,m,j,k \epsilon \mathbb{Z}_+\\
+a^{m+1} - 1 + a - a &= k(a - 1)\\
+\intertext{By adding and subtracting a to the LHS we do not change the equation at all.}\\
+(a^{m+1} - a) + (a - 1) &= k(a - 1)\\
+\intertext{Grouping of terms.}\\
+a(a^{m} - 1) + (a - 1) &= k(a - 1)\\
+\intertext{Preparation for introduction of the inductive hypothesis.}\\
+a*j(a - 1) + (a - 1) &= k(a - 1)\\
+\intertext{Introduction of the inductive hypothesis.}\\
+(a - 1)(a*j + 1) &= k(a - 1)\\
+\intertext{Factoring to show that LHS is divisible by (a - 1)}\\
 &\hspace{0.3cm}\qedsymbol
 \end{align*}
 \end{enumerate}
+It is important to note that the proof above need not have j and k above that are equal to each other for the proof to work. In fact, for the proof to be satisfied, the two integers need to be not equal for it to work.\\\\
 Prove by induction that \begin{math}x^n - y^n\end{math} is divisible by \begin{math}x - y\end{math} for all natural numbers x, y (with \begin{math}x \not = y\end{math}), and n.\\\\
-\noindent Show \begin{math}\forall x,y,n \epsilon \mathbb{Z}_+ ; P(x,y,n):(x^n-y^n)\bmod{x-y} \equiv 0\end{math}
+\noindent Show \begin{math}\forall x,y,n,k \epsilon \mathbb{Z}_+ ; P(n):(x^n-y^n) = k * (x-y)\end{math} where k is any integer multiple.
 \begin{enumerate}
 \item Base Case:\\
-\[P(1,1,1):(1^1 - 1^1)\bmod{1 - 1}\equiv 0 \mod 0 \equiv 0\]\\
-This is assuming that we define \begin{math}a \mod 0 \equiv 0\end{math} where a may be any integer. This answer depends on how we decide to define the modulus function. This is assuming we define the modulus to be the distance of any two integers from each other. In many modern programming languages and applications this operation is undefined. I see no other way to complete this proof without ignoring this limitation and using the more liberal definition.
+\[P(1): x^1 - y^1   = x - y = k * (x - y); if k = 1\]\\
 \item Inductive Hypothesis:
-\[P(a,b,c):(a^c - b^c)\bmod{a - b}\equiv 0\ ; \forall a,b,c \epsilon \mathbb{Z}_+\]
+\[P(j):(a^j - b^j) = k(a - b); \forall a,b,j,k \epsilon \mathbb{Z}_+\]
 \item Inductive Step:\\
 \begin{align*}
-P(a+1,b+1,c+1):((a+1)^{c+1} - (b+1)^{c+1})\bmod{((a + 1) - (b + 1))}&\equiv 0 ;\\
-\forall a,b,c \epsilon \mathbb{Z}_+\\
-((a+1)^{c+1} - (b+1)^{c+1})\bmod{((a + 1) - (b + 1))}&\equiv 0\\
-((a+1)(a+1)^{c} - (b+1)(b+1)^{c})\bmod{(a-b)}&\equiv 0\\
-((a+1)\sum\limits_{i = 0}^{c} {c \choose i} (a^i - 1) - (b+1)\sum\limits_{j = 0}^{c} {c \choose j} (b^j - 1))\bmod{(a-b)} &\equiv 0\\
-(\sum\limits_{i = 0}^{c} {c \choose i} a^{i+1} - \sum\limits_{j = 0}^{c} {c \choose j} b^{j+1} + \sum\limits_{i = 0}^{c} {c \choose i} a^i - \sum\limits_{j = 0}^{c} {c \choose j} b^j)\bmod{(a-b)} &\equiv 0\\
-(\sum\limits_{i = 0}^{c} {c \choose i} a^{i+1} - \sum\limits_{j = 0}^{c} {c \choose j} b^{j+1} + \sum\limits_{i = 1}^{c} {c \choose i} a^i - \sum\limits_{j = 1}^{c} {c \choose j} b^j + c - c)\bmod{(a-b)} &\equiv 0\\
-((\sum\limits_{i = 0}^{c} {c \choose i} a^{i+1} - \sum\limits_{j = 0}^{c} {c \choose j} b^{j+1})\bmod{(a-b)} +\\ (\sum\limits_{i = 1}^{c} {c \choose i} a^i - \sum\limits_{j = 1}^{c} {c \choose j} b^j)\bmod{(a-b)})\bmod{(a-b)} &\equiv 0\\
-(((\sum\limits_{i = 1}^{c} {c \choose i} a^{i + 1} - \sum\limits_{j = 1}^{c} {c \choose j} b^{j + 1}) + (1 - 1)\bmod{(a-b)} +\\ ((\sum\limits_{i = 1}^{c} {c \choose i} a^{i} - \sum\limits_{j = 1}^{c} {c \choose j} b^{j}))\bmod{(a-b)})\bmod{(a-b)} &\equiv 0\\
+P(j+1):(a^(j+1) - b^(j+1)) &= k(a-b)\\
+a*a^(j) - b*b^j &= k(a-b)\\
+(a+b-b)*a^j - (b - a + a)*b^j + (a - b) - (a - b) &= k(a-b)\\
+(a+b)*(a^j-b^j) - b*a^{j-1}-a*b^{j-1}+ (a - b) - (a - b) &= k(a-b)\\
+(a+b)*(a^j-b^j) - a*b*(a^{j-1}-b^{j-1})+ (a - b) - (a - b) &= k(a-b)\\
+k(a - b) - a*b*(a^{j-1}-b^{j-1})+ (a - b) - (a - b) &= k(a-b)\\
 \end{align*}
 \begin{align*}
-(0 + 0) &\equiv 0\\
-0 &\equiv 0 \\
 &\hspace{0.3cm}\qedsymbol
 \end{align*}
 \end{enumerate}
@@ -136,11 +130,10 @@ Prove the following theorem using the definition of \begin{math} \Omega (f (n))\
 &= \lim_{n\to\infty} n^{\frac{1}{2d}} \rightarrow \infty
 \end{align}\\
 Use the fact that for any \begin{math} n  \geq 1\end{math} by the Cauchy-Sqwarz inequality\
-\[\ln{n} = \int_{1}^{n} \frac{dx}{x} \leq \sqrt{\int_{1}^{n} dx \int_{1}^{n} \frac{dx}{x^2}} = \sqrt{(n-1)(1-\frac{1}{n})} = \sqrt{n + \frac{1}{n} - 2}\]\\
+\[(\ln{n})^d = (\int_{1}^{n} \frac{dx}{x})^d \leq (\int_{1}^{n} dx \int_{1}^{n} \frac{dx}{x^2})^{\frac{d}{2}} = ((n-1)(1-\frac{1}{n}))^{\frac{d}{2}} = (n + \frac{1}{n} - 2)^{\frac{d}{2}}\]\\
 Producing a desired result of:
-\[\ln{n} \leq \sqrt{n + \frac{1}{n} - 2}\]
-Using the result of prior limit test and immediate results above (since \begin{math}d \geq 2\end{math}), we may say that:
-\[\ln{n} < \sqrt[2d]{n} < \sqrt{n + \frac{1}{n} - 2} < \sqrt{n}\]
+\[(\ln{n})^d \leq (n + \frac{1}{n} - 2)^{\frac{d}{2}}\]
+Using the result of prior limit test and immediate results above (since \begin{math}d \geq 2\end{math}), we cannot immediately state that 
 Thus:
 \[\lim_{n\to\infty} \frac{(\ln{n})^d}{\sqrt{n}} \rightarrow 0\]
 \section{2.1 Understand}
