--- a/Homework_1.tex
+++ b/Homework_1.tex
@@ -105,19 +105,20 @@ Prove by induction that \begin{math}x^n - y^n\end{math} is divisible by \begin{m
 \noindent Show \begin{math}\forall x,y,n,k \epsilon \mathbb{Z}_+ ; P(n):(x^n-y^n) = k * (x-y)\end{math} where k is any integer multiple.
 \begin{enumerate}
 \item Base Case:\\
-\[P(1): x^1 - y^1   = x - y = k * (x - y); if k = 1\]\\
+\[P(1): x^1 - y^1   = x - y = k * (x - y)\]\\
 \item Inductive Hypothesis:
 \[P(j):(a^j - b^j) = k(a - b); \forall a,b,j,k \epsilon \mathbb{Z}_+\]
 \item Inductive Step:\\
 \begin{align*}
-P(j+1):(a^(j+1) - b^(j+1)) &= k(a-b); \forall a,b,j,k,g \epsilon \mathbb{Z}_+\\
-a^(j+1) - b^(j+1) + b*a^j - b*a^j &= k(a-b)\\
+P(j+1):(a^{j+1} - b^{j+1}) &= k(a-b); \forall a,b,j,k,g \epsilon \mathbb{Z}_+ \intertext{where k and g may be any integer that satisfies the relationship.}\\
+a^{j+1} - b^{j+1} + b*a^j - b*a^j &= k(a-b)\\
+\intertext{Adding these two terms does not change anything and makes it more easily manipulatable.}\\
 a^j(a-b) + b(a^j-b^j) &= k(a-b)\\
 a^j(a-b) + g(a - b) &= k(a-b)\\
+\intertext{Introduction of the inductive hypothesis. Clearly all terms are divisible by (a - b). Like with the previous theorem, g and k must not be equal for this proof to be true.}\\
 &\hspace{0.3cm}\qedsymbol
 \end{align*}
 \end{enumerate}
-Some explanation is needed to explain how the summations on the last page are divisible by \begin{math} a - b\end{math}. Due to the binomial theorem, any series of the nature \begin{math} (a - b) + (a^2 - b^2) + (a^3 - b^3) + ...  \end{math} has within it an \begin{math} (a - b) \end{math}. So if the first term 1 is allowed to elapse from each term we can then say the summations are divisible.\\\\
 Prove the following theorem using the definition of \begin{math} \Omega (f (n))\end{math} and \begin{math}O(f (n))\end{math} , or else the limit test.\\\\
 \noindent \textbf{Theorem 4.} Let \begin{math}d \geq 2\end{math} be an integer. Then \begin{math}\sqrt[^d]{n} \epsilon \Omega (\sqrt[^{2d}]{n})\end{math} and \begin{math}(\ln {n}^d) \epsilon O(\sqrt{n})\end{math}\\\\
 \begin{align}
