--- a/Homework_1.tex
+++ b/Homework_1.tex
@@ -42,11 +42,11 @@ P(k+1):\sum\limits_{i = 1}^{k+1} i &= \frac{(k + 1)(k+2)}{2} \forall k \epsilon 
 \end{align*}
 \end{enumerate}
 \noindent Prove Gauss’s sum using induction on \begin{math}n\end{math}. Make sure to include a base case for \begin{math} n = 1\end{math} and an inductive hypothesis and an inductive step for \begin{math}n > 1\end{math}.\\\\
+\noindent Theorem 2 is indeed true.
 \noindent \textbf{Theorem 3.}
 \begin{math}P(n):\sum\limits_{i = 1}^{n} i^5 = \big(\frac{n(n + 1)}{2}\big)^2\frac{2n^2+2n-1}{3} \forall n \epsilon \mathbb{Z}_+  \end{math}
-\\\\For this proof I used the fundamental theorem of algebra to help assist me. The last three steps of the inductive step to ensure \begin{math}P(k+1)\end{math} step I obtained those steps by expanding the right hand side and ensuring that each polynomial on the left hand side matched the right hand side. Those were included on the left hand side in reverse to ensure continuity.\\
+\\\\For this proof I used the fundamental theorem of algebra to help assist me. The last three steps of the inductive step to ensure \begin{math}P(k+1)\end{math} step I obtained those steps by expanding the right hand side and ensuring that each polynomial on the left hand side matched the right hand side. Those were included on the left hand side in reverse to ensure continuity and readability.\\
 \begin{enumerate}
-
 \item Base Case:\\
 \begin{align*}
 P(1):\sum\limits_{i = 1}^{1} i^5 &= \big(\frac{1(1 + 1)}{2}\big)^2\frac{2(1)^2+2(1)-1}{3}\\
@@ -81,7 +81,7 @@ Prove by induction that for all natural numbers \begin{math}x\end{math} and \beg
 \noindent For this proof I decided to show that \begin{math}x - 1\mid x^n - 1\end{math} which is equivant \begin{math}P(x,n):x^n - 1 = k(x - 1) ; k \epsilon \mathbb{Z}_+ \end{math} where k is any integer multiple.\\\\ 
 \begin{enumerate}
 \item Base Case:\\
-\[P(1):x^1 - 1 = 0 = k(x - 1); true if k = 1\]\\
+\[P(1):x^1 - 1 = 0 = k(x - 1)\]\\
 \item Inductive Hypothesis:
 \[P(m):a^m - 1 = k(a - 1) ; \forall a,m,k \epsilon \mathbb{Z}_+\]
 \item Inductive Step:\\
@@ -97,6 +97,7 @@ a*j(a - 1) + (a - 1) &= k(a - 1)\\
 \intertext{Introduction of the inductive hypothesis.}\\
 (a - 1)(a*j + 1) &= k(a - 1)\\
 \intertext{Factoring to show that LHS is divisible by (a - 1)}\\
+k(a - 1) &= k(a - 1); k = a*j + 1\\
 &\hspace{0.3cm}\qedsymbol
 \end{align*}
 \end{enumerate}
@@ -115,7 +116,9 @@ a^{j+1} - b^{j+1} + b*a^j - b*a^j &= k(a-b)\\
 \intertext{Adding these two terms does not change anything and makes it more easily manipulatable.}\\
 a^j(a-b) + b(a^j-b^j) &= k(a-b)\\
 a^j(a-b) + g(a - b) &= k(a-b)\\
-\intertext{Introduction of the inductive hypothesis. Clearly all terms are divisible by (a - b). Like with the previous theorem, g and k must not be equal for this proof to be true.}\\
+\intertext{Introduction of the inductive hypothesis. Clearly all terms are divisible by (a - b). Like with the previous theorem, g and k must not be equal for this proof to be true. Theorem 3 is indeed true.}\\
+(a^j + g)(a-b)&= k(a-b)\\
+k(a-b)&= k(a-b);k = a^j + g\\
 &\hspace{0.3cm}\qedsymbol
 \end{align*}
 \end{enumerate}
@@ -130,9 +133,10 @@ Use the fact that for any \begin{math} n  \geq 1\end{math} by the Cauchy-Sqwarz 
 \[(\ln{n})^d = (\int_{1}^{n} \frac{dx}{x})^d \leq (\int_{1}^{n} dx \int_{1}^{n} \frac{dx}{x^2})^{\frac{d}{2}} = ((n-1)(1-\frac{1}{n}))^{\frac{d}{2}} = (n + \frac{1}{n} - 2)^{\frac{d}{2}}\]\\
 Producing an important result for intuition when considering the smallest value of d:
 \[(\ln{n})^d \leq n \leq (n + \frac{1}{n} - 2)^{\frac{d}{2}}\]
-Using the result of prior limit test and immediate results above (since \begin{math}d \geq 2\end{math}), we cannot immediately state that the limit approaches 0.
+Using the result of prior limit test and immediate results above (since \begin{math}d \geq 2\end{math}), we cannot immediately state that the limit approaches 0. Using Cauchy-Sqwarz did not produce a tight enough bound to say either way, but it does give us a ballpark estimate of the neighborhood of our possible bound. By noticing a fact of the rules of logs we can find that tighter bound we were looking for.
 \[\lim_{n\to\infty} \frac{(\ln{n})^d}{\sqrt{n}} =\lim_{n\to\infty} \frac{(2\ln{\sqrt{n}})^d}{\sqrt{n}} \rightarrow 0\]
-From the result above and just prior, I can say with some certainty that no matter how large d is, it is a finite value. From consulting concrete mathematics, pages 426 and 427, that applying a logarithm to a sqrt will grow far slower than any square root, if it's power is finite. 
+From the result above and just prior, I can say with some certainty that no matter how large d is, it is a finite value. From consulting Concrete Mathematics by Donald Knuth, pages 426 and 427, that applying a logarithm to a sqrt will grow far slower than any polynomial on n (including square roots), when it's power is some finite quantity greater than 0.\\\\
+We can now say that \begin{math}\sqrt[^d]{n} \epsilon \Omega (\sqrt[^{2d}]{n})\end{math} and \begin{math}(\ln {n}^d) \epsilon O(\sqrt{n})\end{math} and that Theorem 4 is true.
 \section{2.1 Understand}
 Place these functions in order from slowest asymptotic growth to fastest asymptotic growth. You will want to simplify them algebraically before comparing them. Give a short justification (a proof is not necessary) of how you came to this ordering.\\\\\
 According to Donald Knuth, in Concrete Mathematics page 426 and 427, hierarchy and asymptotics of functions was introduced by Paul du Bois-Reymond in 1871 with the following definition:\\\\ 
@@ -160,7 +164,7 @@ Since \begin{math}n < 2n\end{math} the function above grows slower than that bel
 \item \begin{math}f_1(n) = 3^{2n}\end{math}\\
 Since all other cases have been exhausted this function above should grow the fastest.\\\\
 \end{enumerate}
-With use of mathematica and the definition Knuth provided (\begin{math}f(n) < g(n) \Longleftrightarrow \lim_{n\to\infty} \frac{f(n)}{g(n)} = 0\end{math}), I obtained the following results, where the row corresponds the \begin{math}f_i(n)\end{math} and  the column corresponds to \begin{math}g_j(n)\end{math}:\\
+With use of mathematica and the definition Knuth provided (\begin{math}f(n) < g(n) \Longleftrightarrow \lim_{n\to\infty} \frac{f(n)}{g(n)} = 0\end{math}), I obtained the following results, where the i'th row entry corresponds the \begin{math}f_i(n)\end{math} and  the j'th column corresponds to \begin{math}g_j(n)\end{math}:\\
 \[
     \begin{bmatrix}
         1 & 0 & \infty & \infty & 0 & \infty & \infty & \infty & 0\\
